--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-horizontal-scrolling-menu": "^2.7.0",
     "react-multi-carousel": "^2.6.5",
     "react-responsive-carousel": "^3.2.22"
   },
